[gd_scene load_steps=9 format=3 uid="uid://xq02xjjmry5v"]

[ext_resource type="Script" path="res://ui/menu_normal.gd" id="1_jwqdc"]
[ext_resource type="Texture2D" uid="uid://b3vntdktk25no" path="res://images/ico_play.png" id="1_lfddh"]
[ext_resource type="Texture2D" uid="uid://bnjpijj8ak46p" path="res://images/ico_setup.png" id="2_xsk8h"]
[ext_resource type="Texture2D" uid="uid://3d2xt2ynmwbn" path="res://images/ico_info.png" id="3_qkxym"]
[ext_resource type="Texture2D" uid="uid://b3f44egm6kxn7" path="res://images/ico_quit.png" id="4_d8bva"]
[ext_resource type="Texture2D" uid="uid://dw2cp6g1oac72" path="res://images/ico_volume.png" id="6_jkmhf"]

[sub_resource type="Gradient" id="Gradient_um8n7"]
offsets = PackedFloat32Array(0.742718, 1)
colors = PackedColorArray(0, 0.117647, 0.662745, 1, 0.67451, 0, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6n6qn"]
gradient = SubResource("Gradient_um8n7")
fill = 2
fill_from = Vector2(0.5, 0.5)

[node name="MenuNormal" type="TextureRect"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.0
offset_top = -230.5
offset_right = 177.0
offset_bottom = 249.5
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_6n6qn")
script = ExtResource("1_jwqdc")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 54
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 54

[node name="VBoxContainerTop" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainerTop"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="ButtonStart" type="Button" parent="MarginContainer/VBoxContainerTop/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0.768627, 0, 1)
text = "PLAY"
icon = ExtResource("1_lfddh")
expand_icon = true

[node name="ButtonSetup" type="Button" parent="MarginContainer/VBoxContainerTop/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0.768627, 0, 1)
text = "SETUP"
icon = ExtResource("2_xsk8h")
expand_icon = true

[node name="ButtonInfo" type="Button" parent="MarginContainer/VBoxContainerTop/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0.768627, 0, 1)
text = "INFO"
icon = ExtResource("3_qkxym")
expand_icon = true

[node name="ButtonQuit" type="Button" parent="MarginContainer/VBoxContainerTop/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0.768627, 0, 1)
text = "QUIT"
icon = ExtResource("4_d8bva")
expand_icon = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainerTop"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 10

[node name="VolumeIcon" type="TextureRect" parent="MarginContainer/VBoxContainerTop/HBoxContainer"]
layout_mode = 2
texture = ExtResource("6_jkmhf")
expand_mode = 3

[node name="SfxVolume" type="HSlider" parent="MarginContainer/VBoxContainerTop/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 2.0
step = 0.01

[node name="ButtonEN" type="Button" parent="MarginContainer/VBoxContainerTop/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_pressed_color = Color(0, 1, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0.647059, 0, 1)
toggle_mode = true
text = "EN"

[node name="ButtonRU" type="Button" parent="MarginContainer/VBoxContainerTop/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_pressed_color = Color(0, 1, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0.647059, 0, 1)
toggle_mode = true
text = "RU"

[connection signal="mouse_entered" from="MarginContainer/VBoxContainerTop/VBoxContainer/ButtonStart" to="." method="_on_button_start_mouse_entered"]
[connection signal="pressed" from="MarginContainer/VBoxContainerTop/VBoxContainer/ButtonStart" to="." method="_on_button_start_pressed"]
[connection signal="drag_ended" from="MarginContainer/VBoxContainerTop/HBoxContainer/SfxVolume" to="." method="_on_sfx_volume_drag_ended"]
[connection signal="toggled" from="MarginContainer/VBoxContainerTop/HBoxContainer/ButtonEN" to="." method="_on_button_en_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainerTop/HBoxContainer/ButtonRU" to="." method="_on_button_ru_toggled"]
